Closed Bug 349530 Opened 18 years ago Closed 18 years ago

Cannot attach popup and context menu to same XUL element

Categories

(Core :: XUL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: enndeakin, Assigned: smaug)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

The change below is nsXULElement.cpp added in bug 286619 means that both a popup and context menu cannot be applied to the same element. See URL for testcase.

> nsresult
> nsXULElement::AddPopupListener(nsIAtom* aName)
> {
>+    nsCOMPtr<nsIXULPopupListener> popupListener =
>+        NS_STATIC_CAST(nsIXULPopupListener*,
>+                       GetProperty(nsXULAtoms::popuplistener));
>+    if (popupListener) {
>+        // Popup listener is already installed.
>+        return NS_OK;
>+    }
mailWidgets.xml also contains
<content popup="emailAddressPopup" context="emailAddressPopup">
Assignee: nobody → Olli.Pettay
Status: NEW → ASSIGNED
Attached patch proposed patch.Splinter Review
Sorry, my mistake.
I didn't want to change nsIXULPopupListener interface to use nsIAtoms as popup
types, so just using nsIAtoms as nsINode properties.
Attachment #234802 - Flags: review?(enndeakin)
Attachment #234802 - Flags: review?(enndeakin) → review+
Attachment #234802 - Flags: superreview?(bugmail)
Attachment #234802 - Flags: superreview?(bugmail) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.menus → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: