Bug 349530, Cannot attach popup and context menu to same XUL element, r=enndeakin, sr=sicking